--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="您有惱人的頂上問題嗎？髮量少、落髮、找不到滿意的造型，這些都不再是您的問題。愛德蘭絲能幫您解決一切頂上問題！">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sbsy1517.github.io/Aderans-female-wig-testpage/">
-    <meta property="og:image" content="source/logo/ogimg2.jpg">
+    <meta property="og:image" content="source/logo/ogimg3.jpg">
     <meta property="og:image:alt" content="愛德蘭絲專業訂製假髮">
     <meta property="og:image:type" content="img/jpg">
     <meta property="og:locale" content="zh_TW">
@@ -123,7 +123,7 @@
             <button type="button" data-bs-target="#intro-wig" data-bs-slide-to="4" aria-label="Slide 5"> </button>
           </div>
           <div class="carousel-inner"> 
-            <div class="carousel-item active"> <img class="w-100 d-none d-lg-block" src="source/default/intro/1.jpg" alt="1.量身訂做頭模測量"><img class="w-100 d-lg-none" src="source/default/intro/1-sp.jpg" alt="1.量身訂做頭模測量">
+            <div class="carousel-item active"> <img class="w-100 d-none d-lg-block" src="source/default/intro/1.jpg" alt="1.量身訂做頭模測量"><img class="w-100 d-lg-none" src="source/default/~intro/1-sp.jpg" alt="1.量身訂做頭模測量">
               <h4 class="position-absolute">1.量身訂做頭模測量</h4>
               <div class="carousel-caption"> 
                 <p>我們會為每一位客人開模量頭型，讓您的假髮能夠100%符合您的頭型，不會有過大過小的困擾</p>
