--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
             <h1>愛德蘭絲假髮<br>全球第一假髮品牌</h1>
           </div>
         </div>
+        <div class="carousel-item" data-bs-interval="5000"> 
+          <div class="img" id="img-four-sp"></div>
+          <div class="position-absolute">
+            <h1>愛德蘭絲假髮<br>全球第一假髮品牌</h1>
+          </div>
+        </div>
       </div>
     </section>
     <section class="container" id="introduction"> 
@@ -123,7 +129,7 @@
             <button type="button" data-bs-target="#intro-wig" data-bs-slide-to="4" aria-label="Slide 5"> </button>
           </div>
           <div class="carousel-inner"> 
-            <div class="carousel-item active"> <img class="w-100 d-none d-lg-block" src="source/default/intro/1.jpg" alt="1.量身訂做頭模測量"><img class="w-100 d-lg-none" src="source/default/~intro/1-sp.jpg" alt="1.量身訂做頭模測量">
+            <div class="carousel-item active"> <img class="w-100 d-none d-lg-block" src="source/default/intro/1.jpg" alt="1.量身訂做頭模測量"><img class="w-100 d-lg-none" src="source/default/intro/1-sp.jpg" alt="1.量身訂做頭模測量">
               <h4 class="position-absolute">1.量身訂做頭模測量</h4>
               <div class="carousel-caption"> 
                 <p>我們會為每一位客人開模量頭型，讓您的假髮能夠100%符合您的頭型，不會有過大過小的困擾</p>
