--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
       <div class="mobile-menu position-absolute w-100"><a class="w-100 d-block text-center" href="#firstView-sp" title="回到頂端">TOP </a><a class="w-100 d-block text-center" href="#introduction" title="假髮介紹">假髮介紹</a><a class="w-100 d-block text-center" href="#comparison" title="使用前後對比照">使用前後對比照</a><a class="w-100 d-block text-center" href="#questionAnswer" title="常見問題">常見問題</a><a class="w-100 d-md-block d-none text-center signup-sp" href="https://www.aderanstaiwan.com.tw/reservation_form/" target="_blank" title="立即報名體驗預約">立即預約</a><a class="w-100 d-block d-md-none text-center signup-sp" href="https://www.aderanstaiwan.com.tw/sp/reservation_form/" target="_blank" title="立即報名體驗預約">立即預約</a></div>
     </nav>
-    <loading> </loading>
+    <section class="loading"><img class="loadinglogo" src="source/logo/index_logo.png" alt="愛德蘭斯專業假髮"></section>
     <section class="jumbotron carousel slide carousel-fade d-none d-lg-block" id="firstView" data-bs-ride="carousel" data-bs-pause="false">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5000"> 
