--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta property="og:locale" content="zh_TW">
     <meta property="og:image:height" content="630">
     <meta property="og:image:width" content="1200">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&amp;family=Noto+Serif+TC:wght@300;400;700&amp;family=Roboto:wght@300;400;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style/all.css">
     <link rel="apple-touch-icon" sizes="180x180" href="source/logo/favicon/apple-touch-icon.png">
@@ -38,8 +41,8 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WD2BVWK" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <nav class="fixed-top"> 
-      <div class="container d-flex justify-content-between align-items-center"><a class="logo d-none d-md-block" href="https://www.aderanstaiwan.com.tw/" target="_blank" title="前往 愛德蘭絲 台灣官網"> <img src="source/logo/index_logo.png" alt="愛德蘭斯專業假髮"></a><a class="logo d-block d-md-none" href="https://www.aderanstaiwan.com.tw/sp/" target="_blank" title="前往 愛德蘭絲 台灣官網"> <img src="source/logo/index_logo.png" alt="愛德蘭斯專業假髮"></a>
-        <ul class="d-none d-lg-flex justify-content-between">
+      <div class="container d-flex justify-content-between align-items-center"><a class="logo d-none d-md-block" href="https://www.aderanstaiwan.com.tw/" target="_blank" title="前往 愛德蘭絲 台灣官網"> <img src="source/logo/index_logo.png" alt="愛德蘭斯專業訂製假髮"></a><a class="logo d-block d-md-none" href="https://www.aderanstaiwan.com.tw/sp/" target="_blank" title="前往 愛德蘭絲 台灣官網"> <img src="source/logo/index_logo.png" alt="愛德蘭斯專業訂製假髮"></a>
+        <ul class="d-none d-lg-flex justify-content-between align-items-center">
           <li> <a href="#firstView" title="回到頂端"> TOP </a></li>
           <li> <a class="nav-btn" href="#introduction" title="假髮介紹">假髮介紹</a></li>
           <li> <a class="nav-btn" href="#comparison" title="使用前後對比照">使用前後對比照</a></li>
@@ -52,7 +55,7 @@
       </div>
       <div class="mobile-menu position-absolute w-100"><a class="w-100 d-block text-center" href="#firstView-sp" title="回到頂端">TOP </a><a class="w-100 d-block text-center" href="#introduction" title="假髮介紹">假髮介紹</a><a class="w-100 d-block text-center" href="#comparison" title="使用前後對比照">使用前後對比照</a><a class="w-100 d-block text-center" href="#questionAnswer" title="常見問題">常見問題</a><a class="w-100 d-md-block d-none text-center signup-sp" href="https://www.aderanstaiwan.com.tw/reservation_form/" target="_blank" title="立即報名體驗預約">立即預約</a><a class="w-100 d-block d-md-none text-center signup-sp" href="https://www.aderanstaiwan.com.tw/sp/reservation_form/" target="_blank" title="立即報名體驗預約">立即預約</a></div>
     </nav>
-    <section class="loading"><img class="loadinglogo" src="source/logo/index_logo.png" alt="愛德蘭斯專業假髮"></section>
+    <section class="loading"><img class="loadinglogo" src="source/logo/index_logo.png" alt="愛德蘭斯專業訂製假髮"></section>
     <section class="jumbotron carousel slide carousel-fade d-none d-lg-block" id="firstView" data-bs-ride="carousel" data-bs-pause="false">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5000"> 
@@ -86,25 +89,25 @@
         <div class="carousel-item active" data-bs-interval="5000"> 
           <div class="img" id="img-one-sp"></div>
           <div class="position-absolute">
-            <h1>愛德蘭絲假髮<br>全球第一假髮品牌</h1>
+            <h1>愛德蘭絲<br>專業訂製假髮</h1>
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="5000"> 
           <div class="img" id="img-two-sp"></div>
           <div class="position-absolute">
-            <h1>愛德蘭絲假髮<br>全球第一假髮品牌</h1>
+            <h1>愛德蘭絲<br>專業訂製假髮</h1>
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="5000"> 
           <div class="img" id="img-three-sp"></div>
           <div class="position-absolute">
-            <h1>愛德蘭絲假髮<br>全球第一假髮品牌</h1>
+            <h1>愛德蘭絲<br>專業訂製假髮</h1>
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="5000"> 
           <div class="img" id="img-four-sp"></div>
           <div class="position-absolute">
-            <h1>愛德蘭絲假髮<br>全球第一假髮品牌</h1>
+            <h1>愛德蘭絲<br>專業訂製假髮</h1>
           </div>
         </div>
       </div>
@@ -251,7 +254,7 @@
               </div>
             </div>
             <div class="card-body">
-              <p>可以量身訂製只屬於您獨一無二的髮型</p>
+              <p>完美的售後服務讓您隨時擁有完美造型</p>
             </div>
           </div>
         </div>
@@ -273,14 +276,12 @@
             <button type="button" data-bs-target="#intro-com" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#intro-com" data-bs-slide-to="2" aria-label="Slide 3"> </button>
             <button type="button" data-bs-target="#intro-com" data-bs-slide-to="3" aria-label="Slide 4"> </button>
-            <button type="button" data-bs-target="#intro-com" data-bs-slide-to="4" aria-label="Slide 5"></button>
           </div>
           <div class="carousel-inner"> 
             <div class="carousel-item active"> <img class="d-block w-100" src="source/default/comparison/1.jpg" alt="使用前後對比照-1"></div>
             <div class="carousel-item"> <img class="d-block w-100" src="source/default/comparison/2.jpg" alt="使用前後對比照-2"></div>
             <div class="carousel-item"> <img class="d-block w-100" src="source/default/comparison/3.jpg" alt="使用前後對比照-3"></div>
             <div class="carousel-item"> <img class="d-block w-100" src="source/default/comparison/4.jpg" alt="使用前後對比照-4"></div>
-            <div class="carousel-item"> <img class="d-block w-100" src="source/default/comparison/5.jpg" alt="使用前後對比照-5"></div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#intro-com" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
           <button class="carousel-control-next" type="button" data-bs-target="#intro-com" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
