footer image link and store list removed navbar add one more btn "store" target-blank sass fixed-top add background color transparent and box-shadow none

--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
           <li> <a class="nav-btn" href="#introduction" title="假髮介紹">假髮介紹</a></li>
           <li> <a class="nav-btn" href="#comparison" title="使用前後對比照">使用前後對比照</a></li>
           <li> <a class="nav-btn" href="#questionAnswer" title="常見問題">常見問題</a></li>
+          <li> <a class="nav-btn" href="https://www.aderanstaiwan.com.tw/shop/" title="立即查詢最近店舖" target="_blank">查詢店舖</a></li>
           <li class="signup-pc"><a class="rounded-pill nav-btn" href="https://www.aderanstaiwan.com.tw/reservation_form/" target="_blank" title="立即報名預約體驗">立即預約    </a></li>
         </ul>
         <div class="mobile-menu-btn d-lg-none">
           <div class="hamburger-menu"></div>
         </div>
       </div>
-      <div class="mobile-menu position-absolute w-100"><a class="w-100 d-block text-center" href="#firstView-sp" title="回到頂端">TOP </a><a class="w-100 d-block text-center" href="#introduction" title="假髮介紹">假髮介紹</a><a class="w-100 d-block text-center" href="#comparison" title="使用前後對比照">使用前後對比照</a><a class="w-100 d-block text-center" href="#questionAnswer" title="常見問題">常見問題</a><a class="w-100 d-md-block d-none text-center signup-sp" href="https://www.aderanstaiwan.com.tw/reservation_form/" target="_blank" title="立即報名體驗預約">立即預約</a><a class="w-100 d-block d-md-none text-center signup-sp" href="https://www.aderanstaiwan.com.tw/sp/reservation_form/" target="_blank" title="立即報名體驗預約">立即預約</a></div>
+      <div class="mobile-menu position-absolute w-100"><a class="w-100 d-block text-center" href="#firstView-sp" title="回到頂端">TOP </a><a class="w-100 d-block text-center" href="#introduction" title="假髮介紹">假髮介紹</a><a class="w-100 d-block text-center" href="#comparison" title="使用前後對比照">使用前後對比照</a><a class="w-100 d-block text-center" href="#questionAnswer" title="常見問題">常見問題</a><a class="w-100 d-md-block d-none text-center" href="https://www.aderanstaiwan.com.tw/shop/" title="立即查詢最近店舖" target="_blank">查詢店舖</a><a class="w-100 d-block d-md-none text-center" href="https://www.aderanstaiwan.com.tw/sp/shop/" title="立即查詢最近店舖" target="_blank">查詢店舖</a><a class="w-100 d-md-block d-none text-center signup-sp" href="https://www.aderanstaiwan.com.tw/reservation_form/" target="_blank" title="立即報名體驗預約">立即預約</a><a class="w-100 d-block d-md-none text-center signup-sp" href="https://www.aderanstaiwan.com.tw/sp/reservation_form/" target="_blank" title="立即報名體驗預約">立即預約</a></div>
     </nav>
     <section class="loading"><img class="loadinglogo" src="source/logo/index_logo.png" alt="愛德蘭斯專業訂製假髮"></section>
     <section class="jumbotron carousel slide carousel-fade d-none d-lg-block" id="firstView" data-bs-ride="carousel" data-bs-pause="false">
@@ -364,10 +365,10 @@
         </div>
       </div>
     </section>
-    <footer>
+    <footer id="footer">
       <div class="container">
-        <div class="row footer_content justify-content-between">
-          <div class="footer_list col-lg-3"><a class="img d-none d-md-inline" href="https://www.aderanstaiwan.com.tw/" target="_blank" title="前往 愛德蘭絲 台灣官網"> <img src="source/logo/index_logo.png" alt="愛德蘭斯專業假髮"></a><a class="img d-inline d-md-none" href="https://www.aderanstaiwan.com.tw/sp/" target="_blank" title="前往 愛德蘭絲 台灣官網"> <img src="source/logo/index_logo.png" alt="愛德蘭斯專業假髮"></a>
+        <div class="row footer_content justify-content-evenly">
+          <div class="footer_list col-lg-3"><img class="d-block mx-auto" src="source/logo/index_logo.png" alt="愛德蘭斯專業假髮">
             <ul class="social w-100 d-flex">
               <li><a class="fab fa-facebook-f" href="https://www.facebook.com/Aderanstaiwan/" target="_blank" title="愛德蘭絲Facebook官方帳號"></a></li>
               <li><a class="fab fa-instagram" href="https://www.instagram.com/aderanstaiwan/" target="_blank" title="愛德蘭絲Instagram官方帳號"></a></li>
@@ -379,24 +380,15 @@
             </div>
             <hr class="d-lg-none d-block">
           </div>
-          <div class="footer_list col-lg-3 offset-lg-1 nav-map">
+          <div class="footer_list col-lg-4 offset-lg-1 nav-map">
             <h4>網站地圖</h4>
             <ul>
               <li><a href="#firstView" title="回到頂端">TOP</a></li>
               <li><a href="#introduction" title="假髮介紹">假髮介紹</a></li>
               <li><a href="#comparison" title="使用前後對比照">使用前後對比照</a></li>
               <li><a href="#questionAnswer" title="常見問題">常見問題</a></li>
-            </ul>
-            <hr class="d-lg-none d-block">
-          </div>
-          <div class="footer_list col-lg-5 store">
-            <h4>沙龍店鋪一覽</h4>
-            <ul>
-              <li><a href="https://goo.gl/maps/rcKHv65zE8yMxdm47" target="_blank" title="查看 台北總店 位置">台北總店｜台北市館前路43號3樓</a></li>
-              <li><a href="https://goo.gl/maps/ZbRiXdasE4LTvEfK9" target="_blank" title="查看 台北忠孝店 位置">台北忠孝店｜台北市忠孝東路四段130號4樓</a></li>
-              <li><a href="https://goo.gl/maps/zKhgd82yyBcMH4tk8" target="_blank" title="查看 新竹Big City館 位置">新竹Big City館｜新竹市中央路239號</a></li>
-              <li><a href="https://goo.gl/maps/6LJrodMMvs6fKTJ77" target="_blank" title="查看 台中旗艦店 位置">台中旗艦店｜台中市西區台灣大道二段458－1號</a></li>
-              <li><a href="https://goo.gl/maps/9TykMTUzjDkb27pr7" target="_blank" title="查看 高雄店 位置">高雄店｜高雄市左營區博愛三路18號</a></li>
+              <li> <a class="d-none d-md-block" href="https://www.aderanstaiwan.com.tw/shop/" title="立即查詢最近店鋪" target="_blank">查詢店舖 </a></li>
+              <li> <a class="d-block d-md-none" href="https://www.aderanstaiwan.com.tw/sp/shop/" title="立即查詢最近店鋪" target="_blank">查詢店舖 </a></li>
             </ul>
           </div>
         </div>
