--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
     <section class="container" id="introduction"> 
       <div class="intro">
         <div class="title"> 
-          <h3>假髮介紹<span class="d-none d-lg-inline">Indroduction </span></h3>
+          <h3>假髮介紹<span class="d-none d-lg-inline">Introduction </span></h3>
           <p class="d-block d-lg-none text-center">
-             Indroduction</p>
+             Introduction</p>
         </div>
         <div class="line rounded-pill"> </div>
       </div>
